<resources>
    <string name="app_name">School Management</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="net_disconnected">The internet connection appears to be offline.</string>
    <string name="settings">Settings</string>
    <string name="cancle">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="term_header">Terms and Condition</string>
    <string name="zoom_class">Zoom Live</string>
    <string name="youtube_live">Live Class</string>
    <string name="assessment">Assessment</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="show_reviews">Show Reviews</string>
    <string name="support">Help and Support</string>
    <string name="customer_tab">Customer</string>
    <string name="reports_tab">Reports</string>
    <string name="profile_tab">Proflie</string>
    <string name="customerlist">Customer List</string>
    <string name="reports">Reports</string>
    <string name="profile">Profile</string>
    <string name="complete">Complete Profile</string>
    <string name="all">ALL</string>
    <string name="theywillpay">They will pay</string>
    <string name="theywillrecieve">They will Receive</string>
    <string name="updateprofile">Update</string>
    <string name="completeprofile">Complete Profile</string>
    <string name="blank_name">Please enter your name.</string>
    <string name="create_account">Create an Account</string>
    <string name="via">Or via</string>
    <string name="personalaccount">Personal Account</string>
    <string name="bussinessaccount">Business Account</string>
    <string name="accounttype">Account Type</string>
    <string name="type_blank">Please select Account Type.</string>
    <string name="businessinfo">Business Info</string>
    <string name="owner_name">Owner Name</string>
    <string name="buisnessname">Business Name (Store)</string>
    <string name="blank_ownername">Please enter Owner Name.</string>
    <string name="blank_businessname">Please enter Business Name (Store)</string>
    <string name="blank_moblieno">Please enter Mobile No.</string>
    <string name="blank_dob">Please enter Date of birth.</string>
    <string name="blank_address">Please enter Address.</string>
    <string name="blank_emailaddress">Please enter Email Address.</string>
    <string name="username">UserName</string>
    <string name="forgetpassword">Forgot Password?</string>
    <string name="resetPassword">Reset Password?</string>
    <string name="emailaddress">Email Address</string>
    <string name="mobileno">Mobile No.</string>
    <string name="login">LOG IN</string>
    <string name="next">Next</string>
    <string name="moblieno_invalid">Mobile No. must be 10 digit.</string>
    <string name="blank_otp">Please enter Otp.</string>
    <string name="logout_message">Are you sure you want to logout ?</string>
    <string name="resetpassword">Reset Password</string>
    <string name="confirmyourmail">Confirm your email and we will \n send instructions</string>
    <string name="myprofile">My Profile</string>
    <string name="favoriteleagues">Favorite Leagues</string>
    <string name="favoriteteams">Favorite Teams</string>
    <string name="language">Language</string>
    <string name="removeads">Remove Ads</string>
    <string name="tellafriend">Tell a Friend</string>
    <string name="contactus">Contact us</string>
    <string name="logout">Logout</string>
    <string name="termconditions"> Terms and Conditions*</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="country">Country of Residence</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="createaccount">CREATE ACCOUNT</string>
    <string name="alreadyuser">Already user? </string>
    <string name="clickhere">Click here</string>
    <string name="blank_firstname">Please enter name.</string>
    <string name="blank_lastname">Please enter last name.</string>
    <string name="blank_country">Please enter country Name.</string>
    <string name="invalid_emailaddress">Please enter valid email address.</string>
    <string name="blank_feedback">Please Give Reviews, Its not Empty</string>
    <string name="blank_rating">Please Rate Us!!</string>
    <string name="country_invalid">Please select valid country</string>
    <string name="crash_toast_text">Please send crash report</string>
    <string name="takephoto">Take Photo</string>
    <string name="fromgallery">Choose from Library</string>
    <string name="addphoto">Add Photo!</string>
    <string name="path_notvalid">Please select image to upload</string>
    <string name="friendcode">Reference code</string>
    <string name="password">Password</string>
    <string name="intro">Intro</string>
    <string name="getwhatyouwant">Get what you want</string>
    <string name="sigupa_account">Sign up an account</string>
    <string name="skip">Skip</string>
    <string name="nomore_watingtime">No more waiting time</string>
    <string name="trackyourorder">Track your Order</string>
    <string name="login_title">Login</string>
    <string name="doesnothaveaccount">Don\'t have an\naccount yet!</string>
    <string name="loginvia_facebook">LOG IN via FACEBOOK</string>
    <string name="name">Name</string>
    <string name="dob">Date of Birth</string>
    <string name="address">Address</string>
    <string name="signup_title"><b>Sign Up</b></string>
    <string name="signin"><b>Sign in</b></string>
    <string name="login_text">Login</string>
    <string name="signUp_text">Register</string>
    <string name="submit">Submit</string>
    <string name="enter_emailid">Please enter your Email Id below</string>
    <string name="ok">Ok</string>
    <string name="madentry_permission">These permissions are mandatory to get your location. You need to allow them.</string>
    <string name="enterotp">Please enter OTP</string>
    <string name="pleaseneter_otp">Please enter your OTP sent on your\nmobile number.</string>
    <string name="resend">Resend OTP</string>
    <string name="accept">I accept the</string>
    <string name="accept_termcondition">Please accept terms and conditions</string>
    <string name="menu">Menu</string>
    <string name="cart">Cart</string>
    <string name="more">More</string>
    <string name="search1">Search Course by Name</string>
    <string name="storenearyou">Stores nearby you</string>
    <string name="yourorder">Your Order</string>
    <string name="offer">Offer</string>
    <string name="changepassword">Change Password</string>
    <string name="changelanguage">Change Language</string>
    <string name="privacypolicy">Privacy Policy</string>
    <string name="aboutUs">About Us</string>
    <string name="newpassword">New Password</string>
    <string name="blank_password">Please enter password.</string>
    <string name="blank_newpassword">Please enter new password.</string>
    <string name="blank_confirmpassword">Please enter confirm password.</string>
    <string name="password_notmatched">Confirm password must be matched with password.</string>
    <string name="invalid_password">Your password must be between 8 and 20 characters.</string>
    <string name="invalid_newpassword">Your New password must be between 8 and 20 characters.</string>
    <string name="newpassword_notmatched">Confirm password must be matched with new password.</string>
    <string name="rating">Rating:</string>
    <string name="product_cateogry">Product Categories</string>
    <string name="add">Add</string>
    <string name="no_record">No information found.</string>
    <string name="offers">Offers</string>
    <string name="discount_code">Discount Code :</string>
    <string name="minimum">Minimum :</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="discription">Description :</string>
    <string name="pickupaddress">Pick Up Address</string>
    <string name="price">Price:</string>
    <string name="quantity">Quantity:</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="cart_already_containitem">Your cart contains items from a different merchant, Would you like to reset your cart and add this product into your cart?</string>
    <string name="item_incart">items in your cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="extracharges">Extra charges</string>
    <string name="discount">Discount</string>
    <string name="applycoupon">APPLY COUPON</string>
    <string name="total">Total</string>
    <string name="proced_checkout">Proceed to checkout</string>
    <string name="card">Card</string>
    <string name="cash">Cash on Pickup</string>
    <string name="placeorder">Place Order</string>
    <string name="or">OR</string>
    <string name="wedont">We  donot save any information related to your card in our system.</string>
    <string name="select_payment_type">Please select payment mode.</string>
    <string name="congratulation">Congratulation! your course has \n been added.</string>
    <string name="ordermore">Order MORE</string>
    <string name="startnaviation">Start navigation</string>
    <string name="invalid_card">Please enter valid card information.</string>
    <string name="invoicenumber">Invoice number:</string>
    <string name="total_order">Total:</string>
    <string name="pickuptime">Pickup time:</string>
    <string name="status">Status:</string>
    <string name="cancelorder">cancel order</string>
    <string name="sendyourfeedback">Submit Reviews</string>
    <string name="repeatorder">Repeat order</string>
    <string name="wewould_great">We would greatly appreciate it if you kindly  give \n some feedback.</string>
    <string name="writeyourcomment">Write your comments</string>
    <string name="yourfeedbackhelpus">Your feedback will help us to continually improve our quality and services.</string>
    <string name="select_rating">Not Rated yet.</string>
    <string name="discountapplied">Discount Applied</string>
    <string name="paymentby">Payment by</string>
    <string name="orderdetails">Order Details</string>
    <string name="back">Back</string>
    <string name="apply">Apply</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="pleaseneter_code">Please enter coupon code here.</string>
    <string name="blank_couponcode">Please enter coupon code.</string>
    <string name="facebook_app_id">429724901011056</string>
    <string name="fb_login_protocol_scheme">fb429724901011056</string>
    <string name="description">Description</string>
    <string name="changelanguageto">Change language to</string>
    <string name="english">English</string>
    <string name="german">German</string>
    <string name="please_login">Please login</string>
    <string name="please_verifyage">Please verify your age to \n continue on our app.</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="shops">Shops</string>
    <string name="cocktails">Cocktails</string>
    <string name="wishlist">Wishlist</string>
    <string name="breathanlicer">Breath Analyser</string>
    <string name="alcholcalculator">Alcohol Calculator</string>
    <string name="blogs">Blogs</string>
    <string name="contactforadd">Contact  for ad</string>
    <string name="rateus">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="free">Free</string>
    <string name="donthaveaccont">Don\'t have account?</string>
    <string name="classroom">Classes</string>
    <string name="invite">Zoom Live</string>
    <string name="account">Account</string>
    <string name="course">Youtube Live</string>
</resources>