<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--<item
        android:id="@+id/navigation_assess"
        android:icon="@drawable/nav_assessment"
        android:title="@string/nav_assessment" />-->

    <item
        android:id="@+id/navigation_classroom"
        android:icon="@drawable/ic_classroom"
        android:title="@string/classroom" />
    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/ic_youtube_new"
        android:title="@string/course" />

    <item
        android:id="@+id/navigation_invite"
        android:icon="@drawable/ic_zoom"
        android:title="@string/invite" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_account"
        android:title="@string/account" />

</menu>