<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_10"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/applycoupon"
         />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_centerHorizontal="true"
        android:text="@string/pleaseneter_code"
       android:layout_below="@+id/tv_title" />

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/coupon_code"
        android:inputType="textMultiLine|text"
        android:padding="@dimen/padding_10"
        android:layout_below="@+id/tv_desc"/>

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_alignParentRight="true"
        android:text="@string/apply"
        android:layout_below="@+id/edt_comment" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancle"
        android:layout_toLeftOf="@+id/buttonSubmit"
        android:layout_below="@+id/edt_comment"/>


</RelativeLayout>