<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/padding_10"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:text="@string/changelanguageto"
        android:textStyle="bold"
        android:textSize="@dimen/textsize_16sp" />


    <Button
        android:id="@+id/btn_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"

        android:background="@drawable/rounded_button"
        android:text="@string/english"
        android:layout_below="@+id/tv_title" />

    <Button
        android:id="@+id/btn_german"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/german"
        android:background="@drawable/rounded_button"
        android:layout_marginLeft="@dimen/medium_margin"
        android:layout_marginRight="@dimen/medium_margin"
        android:layout_toLeftOf="@+id/buttonSubmit"
        android:layout_below="@+id/btn_english"/>


</RelativeLayout>