<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="@color/colorPrimaryDark">

            <LinearLayout android:id="@+id/ll_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true">


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_left_arrow"

                    android:layout_centerVertical="true"/>

            </LinearLayout>




            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:id="@+id/tv_header"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"

                android:text="@string/sendyourfeedback"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/white"

                />


        </RelativeLayout>



        <androidx.appcompat.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_toRightOf="@+id/iv_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/textsize_14sp"
            android:text="@string/wewould_great"

            android:textColor="@color/white" />


           <androidx.appcompat.widget.AppCompatRatingBar
               android:id="@+id/rating_bar"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:stepSize="1"
               android:max="5"
               android:rating="0"
               android:layout_gravity="center"
               android:layout_marginTop="@dimen/margin_30"
               android:theme="@style/MyRatingBar"/>


          <androidx.appcompat.widget.AppCompatEditText android:id="@+id/et_comment"
              android:layout_width="300dp"
              android:layout_gravity="center"
              android:layout_height="wrap_content"
              android:minHeight="120dp"
              android:hint="@string/writeyourcomment"
              android:gravity="left|top"
              android:layout_marginTop="@dimen/margin_30"

              android:padding="@dimen/margin_5"
              android:layout_marginLeft="@dimen/medium_margin"
              android:layout_marginRight="@dimen/medium_margin"
              android:background="@drawable/rounde_rectangle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_centerVertical="true"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_10"
            android:textSize="@dimen/textsize_12sp"
            android:text="@string/yourfeedbackhelpus"

            android:textColor="@color/light_gray" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_submit"
            style="@style/App_ButtonDarkStyle"
            android:layout_width="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_20"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/margin_20"

            android:layout_marginRight="@dimen/margin_30"
            android:layout_marginLeft="@dimen/margin_30"

            />





    </LinearLayout>






    <data>

    </data>
</layout>