<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data></data>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:id="@+id/layouttop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_100"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/margin_20"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_free"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/free"
                android:textColor="@color/white"
                android:textSize="@dimen/textsize_40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/resetText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layouttop"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/resetPassword"
            android:textColor="@color/textcolor"
            android:textSize="@dimen/textsize_16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_30"
            android:layout_below="@id/resetText"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin">

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center"
                android:layout_marginLeft="@dimen/medium_margin">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:text="@string/mobileno"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize_16sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/showPhoneReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/textsize_16sp" />

            </LinearLayout>


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/medium_margin"
                android:layout_marginRight="@dimen/medium_margin"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/inotpforget"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:layout_marginBottom="@dimen/medium_margin"
                    android:background="@drawable/rounde_rectangle"
                    android:drawableLeft="@drawable/ic_phone"
                    android:drawablePadding="@dimen/padding_10"
                    android:hint="@string/enterotp"
                    android:inputType="phone"
                    android:textColor="@color/textcolor"
                    android:theme="@style/TextLabel" />

                <RelativeLayout
                    android:id="@+id/relativeShowPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inmobileno">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/inpasswordforget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounde_rectangle"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="@dimen/padding_10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/textcolor"
                        android:theme="@style/TextLabel" />

                    <CheckBox
                        android:id="@+id/check_box"
                        android:layout_width="@dimen/margin_30"
                        android:layout_height="@dimen/margin_30"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="7dp"
                        android:button="@drawable/check_boss_visible" />


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/c_relativeShowPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/inmobileno">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/cinpasswordforget"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/medium_margin"
                        android:background="@drawable/rounde_rectangle"
                        android:drawableLeft="@drawable/ic_lock"
                        android:drawablePadding="@dimen/padding_10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textColor="@color/textcolor"
                        android:theme="@style/TextLabel" />

                    <CheckBox
                        android:id="@+id/c_check_box"
                        android:layout_width="@dimen/margin_30"
                        android:layout_height="@dimen/margin_30"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:layout_marginTop="28dp"
                        android:layout_marginRight="9dp"
                        android:button="@drawable/check_boss_visible" />


                </RelativeLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_resetpassword"
                    style="@style/App_ButtonlineblueStyle"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/inconfirmpassword"
                    android:layout_marginTop="@dimen/margin_20"
                    android:text="@string/submit"
                    android:textAllCaps="false" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_signin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/signin"
                    android:textColor="@color/textcolor"

                    android:textSize="@dimen/textsize_14sp" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/cardview"
            android:layout_marginBottom="@dimen/margin_30"
            android:gravity="center">


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donthaveaccont"
                android:textColor="@color/textcolor"
                android:textSize="@dimen/textsize_14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/signup_title"
                android:textColor="#ff272e"
                android:textSize="@dimen/textsize_14sp" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/margin_5"
            android:layout_marginRight="@dimen/margin_5"
            android:layout_marginBottom="@dimen/margin_5"
            android:elevation="0dp"
            app:cardBackgroundColor="@android:color/transparent"
            app:cardCornerRadius="5dp"
            app:cardElevation="0dp">


            <ImageView
                android:id="@+id/iv_advertisement_forget"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_100"
                android:adjustViewBounds="true" />


        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>
